crates/biome_cli/tests/snapshots/main_commands_lint/lint_plugin_manifest_rejects_empty_rules.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome lint biome-manifest.json
```

## `biome-manifest.json`

```json
{ "version": 1, "plugins": { "rules": [], "presets": { "recommended": ["one"] } } }
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
biome-manifest.json:1:1 deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The Biome manifest must contain at least one rule or configuration.
  
  > 1 │ { "version": 1, "plugins": { "rules": [], "presets": { "recommended": ["one"] } } }
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
