crates/biome_cli/tests/snapshots/main_commands_lint/lint_rule_filter_with_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "linter": {
    "rules": {
      "style": {
        "useNamingConvention": {
          "level": "off",
          "options": {
            "strictCase": false
          }
        }
      }
    }
  }
}
```

## `check.js`

```js

    export function NotSTrictPAscal(){}
    export function CONSTANT_CASE(){}
    
```

# Emitted Messages

```block
check.js:3:21 lint/style/useNamingConvention ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This global function name should be in camelCase or PascalCase or UPPERCASE.
  
    2 │     export function NotSTrictPAscal(){}
  > 3 │     export function CONSTANT_CASE(){}
      │                     ^^^^^^^^^^^^^
    4 │     
  

```

```block
Checked 1 file in <TIME>. No fixes needed.
Found 1 warning.
```
