crates/biome_cli/tests/snapshots/main_commands_lint/lint_rule_rule_doesnt_exist.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `check.js`

```js
for(;true;);

```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse CLI arguments.
    
    Caused by:
      couldn't parse `suspicious/inexistant`: the rule doesn't exist.
  


```
