crates/biome_cli/tests/snapshots/main_commands_lint/lint_skip_group_with_enabled_rule.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --skip=suspicious check.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": {
        "noDebugger": "error"
      }
    }
  }
}
```

## `check.js`

```js
debugger; delete obj.prop;
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
