crates/biome_cli/tests/snapshots/main_commands_lint/lint_skip_write.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --skip=complexity/useArrowFunction check.js
```

## `biome.json`

```json
{}
```

## `check.js`

```js

    export const z = function (array) {
        array.flatMap((sentence) => sentence.split(" "));
        return 0;
    };
    
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
